[package]
name = "httpstatus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spmc = { version = "*" }
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["blocking"] }
async-channel = "*"
is_type = "*"
